start stop methods

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 					<div class="controls">
 						<div class="button-group">
 							<button id="switchCarButton">Сменить модель машины</button>
+							<button id="startCarButton">Начать движение</button>
+							<button id="stopCarButton">Остановить движение</button>
 						</div>
 					</div>
 				</div>
