--- a/index.html
+++ b/index.html
@@ -131,7 +131,11 @@
 				<div class="menu">
 					<div class="controls">
 						<div class="button-group">
-							<button id="switchCarButton">Сменить модель машины</button>
+							<select id="carSelect">
+								<option value="0">Base car</option>
+								<option value="1">Truck</option>
+								<option value="2">Sport car</option>
+							</select>
 							<button id="startCarButton">Начать движение</button>
 							<button id="stopCarButton">Остановить движение</button>
 						</div>
