--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="container">
 			<div class="code-section">
-				<h2>Класс Автомобиля на C++</h2>
+				<h2>Класс Автомобиль на C++</h2>
 				<p>
 					Задача: Создать класс автомобиля с наследованием, свойствами и методами движения,
 					остановки и старта
